@@ -444,11 +444,13 @@ krb5_boolean krb5_get_tkt_via_passwd (context, ccache, client, server,
     } else
 	my_creds.times.renew_till = 0;
 
-	 (void) sprintf(prompt,"Kerberos password for %s: ", client_name);
-	 if (strlen (client_name) + 80 > sizeof (password)) {
-	     fprintf (stderr, "principal name %s too long\n", client_name);
+	 if (strlen (client_name) + 80 > sizeof (prompt)) {
+	     fprintf (stderr,
+		      "principal name %s too long for internal buffer space\n",
+		      client_name);
 	     return FALSE;
 	 }
+	 (void) sprintf(prompt,"Kerberos password for %s: ", client_name);
 
 	 pwsize = sizeof(password);
 
